--- a/gb/20/11/23/n12569914.md
+++ b/gb/20/11/23/n12569914.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dgwhoe3792/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dgwhoe3792/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dgwhoe3792/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dgwhoe3792/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dgwhoe3792/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>翁章梁邀林立青暨陈俊文 逛博茶会吃美食</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/470808-600x400.jpg" />
 <h6>嘉义县长翁章梁（左3）邀请《做工的人》原著作者林立青（左1），及《华丽计程车》的作者陈俊文（右1）、中埔乡长李碧菁（右1）一同品尝中埔最道地的“铃兰碗粿”，并和“铃兰碗粿”老板娘合影。（嘉义县政府提供）
 </h6>
 <hr>
-<p>【大纪元2020年11月23日讯】（大纪元记者蔡上海台湾嘉义报导）2020嘉义<ahref="https://github.com/dgwhoe3792/djy/blob/master/gb/tag/%E5%8D%9A%E8%8C%B6%E4%BC%9A.md#1">博茶会</a>11月21日热闹开幕，首场周末假期天气晴朗，台18线阿里山公路车潮大量涌现，短短2天吸引近9万人参观；为了让游客来到中埔欣赏精彩的博茶会之余，也能顺游周边景点、品尝在地美食小吃，23日县长<ahref="https://github.com/dgwhoe3792/djy/blob/master/gb/tag/%E7%BF%81%E7%AB%A0%E6%A2%81.md#1">翁章梁</a>特别邀请今年度最夯台剧《做工的人》原著作者林立青，及任职于新港国中《华丽计程车》的作者陈俊文，一同品尝中埔推荐必吃的国民小吃碗糕及肉粽，由陈俊文解说嘉义在地的人文特色，林立青边听故事边吃美食，直呼“果然是嘉义才有的好滋味！”</p>
-<figure id="12569924" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/11/470809-450x300.jpg" alt="嘉义县长翁章梁（左2）邀请《做工的人》原著作者林立青（右2），及《华丽计程车》的作者陈俊文（左1），一同逛博茶会，并和中埔乡长李碧菁（右1）品尝阿里山公路旁超人气的“阿霞肉粽”，大赞好吃！" width="500" /><figcaption class="wp-caption-text">嘉义县长<ahref="https://github.com/dgwhoe3792/djy/blob/master/gb/tag/%E7%BF%81%E7%AB%A0%E6%A2%81.md#1">翁章梁</a>（左2）邀请《做工的人》原著作者林立青（右2），及《华丽计程车》的作者陈俊文（左1），一同逛<ahref="https://github.com/dgwhoe3792/djy/blob/master/gb/tag/%E5%8D%9A%E8%8C%B6%E4%BC%9A.md#1">博茶会</a>，并和中埔乡长李碧菁（右1）品尝阿里山公路旁超人气的“阿霞肉粽”，大赞好吃！（嘉义县政府提供）</figcaption></figure>
-<figure id="12569922" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/11/470807-450x300.jpg" alt="嘉义县长翁章梁（右2）邀请《做工的人》原著作者林立青（右1），及《华丽计程车》的作者陈俊文（左2），一同逛博茶会，并和中埔乡长李碧菁（左1）品尝中埔最道地的“铃兰碗粿”，盛赞碗粿口感扎实又Q弹。" width="500" /><figcaption class="wp-caption-text">嘉义县长翁章梁（右2）邀请《做工的人》原著作者林立青（右1），及《华丽计程车》的作者陈俊文（左2），一同逛博茶会，并和中埔乡长李碧菁（左1）品尝中埔最道地的“铃兰碗粿”，盛赞碗粿口感扎实又Q弹。（嘉义县政府提供）</figcaption></figure>
-<figure id="12569920" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/11/470805-450x337.jpg" alt="华丽计程车》作者陈俊文，亲自开着华丽计程车，将计程车化身为行动的广告车，在嘉义博茶会场外的台18线阿里山公路旁为博茶会宣传，为活动增添亮点。" width="500" /><figcaption class="wp-caption-text">华丽计程车》作者陈俊文，亲自开着华丽计程车，将计程车化身为行动的广告车，在嘉义博茶会场外的台18线阿里山公路旁为博茶会宣传，为活动增添亮点。（嘉义县政府提供）</figcaption></figure>
-<figure id="12569919" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/11/470804-450x300.jpg" alt="嘉义县长翁章梁（右3）邀请《做工的人》原著作者林立青（左3），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左2）、中埔乡农会总干事李碧云（左1）在茶食馆内合影。" width="500" /><figcaption class="wp-caption-text">嘉义县长翁章梁（右3）邀请《做工的人》原著作者林立青（左3），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左2）、中埔乡农会总干事李碧云（左1）在茶食馆内合影。（嘉义县政府提供）</figcaption></figure>
-<figure id="12569918" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/11/470803-450x300.jpg" alt="嘉义县长翁章梁（中）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左1）、中埔乡农会总干事李碧云（右1）在会场合影。" width="500" /><figcaption class="wp-caption-text">嘉义县长翁章梁（中）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左1）、中埔乡农会总干事李碧云（右1）在会场合影。（嘉义县政府提供）</figcaption></figure>
-<figure id="12569917" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/11/470802-450x337.jpg" alt="23日嘉义县长翁章梁（左1）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（左3），一同逛博茶会，并和中埔乡长李碧菁（右2）、中埔乡农会总干事李碧云（右1）在四季茶区冬藏展柜前合影。" width="500" /><figcaption class="wp-caption-text">23日嘉义县长翁章梁（左1）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（左3），一同逛博茶会，并和中埔乡长李碧菁（右2）、中埔乡农会总干事李碧云（右1）在四季茶区冬藏展柜前合影。（嘉义县政府提供）</figcaption></figure>
-<figure id="12569916" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/11/470801-450x300.jpg" alt="2020嘉义博茶会11月21日热闹开幕，23日嘉义县长翁章梁（中）特别邀请今年度最夯台剧《做工的人》原著作者林立青（左2），及任职于新港国中《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（右1）、中埔乡农会总干事李碧云（左1）在会场合影。" width="500" /><figcaption class="wp-caption-text">2020嘉义博茶会11月21日热闹开幕，23日嘉义县长翁章梁（中）特别邀请今年度最夯台剧《做工的人》原著作者林立青（左2），及任职于新港国中《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（右1）、中埔乡农会总干事李碧云（左1）在会场合影。（嘉义县政府提供）</figcaption></figure>
+<p>【大纪元2020年11月23日讯】（大纪元记者蔡上海台湾嘉义报导）2020嘉义<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%9A%E8%8C%B6%E4%BC%9A.md#1">博茶会</a>11月21日热闹开幕，首场周末假期天气晴朗，台18线阿里山公路车潮大量涌现，短短2天吸引近9万人参观；为了让游客来到中埔欣赏精彩的博茶会之余，也能顺游周边景点、品尝在地美食小吃，23日县长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BF%81%E7%AB%A0%E6%A2%81.md#1">翁章梁</a>特别邀请今年度最夯台剧《做工的人》原著作者林立青，及任职于新港国中《华丽计程车》的作者陈俊文，一同品尝中埔推荐必吃的国民小吃碗糕及肉粽，由陈俊文解说嘉义在地的人文特色，林立青边听故事边吃美食，直呼“果然是嘉义才有的好滋味！”</p>
+<figure id="12569924" aria-describedby="caption-12569924" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/11/470809-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/11/470809-450x300.jpg" alt="嘉义县长翁章梁（左2）邀请《做工的人》原著作者林立青（右2），及《华丽计程车》的作者陈俊文（左1），一同逛博茶会，并和中埔乡长李碧菁（右1）品尝阿里山公路旁超人气的“阿霞肉粽”，大赞好吃！" width="500" /></a><figcaption id="caption-12569924" class="wp-caption-text">嘉义县长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BF%81%E7%AB%A0%E6%A2%81.md#1">翁章梁</a>（左2）邀请《做工的人》原著作者林立青（右2），及《华丽计程车》的作者陈俊文（左1），一同逛<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%9A%E8%8C%B6%E4%BC%9A.md#1">博茶会</a>，并和中埔乡长李碧菁（右1）品尝阿里山公路旁超人气的“阿霞肉粽”，大赞好吃！（嘉义县政府提供）</figcaption></figure>
+<figure id="12569922" aria-describedby="caption-12569922" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/11/470807-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/11/470807-450x300.jpg" alt="嘉义县长翁章梁（右2）邀请《做工的人》原著作者林立青（右1），及《华丽计程车》的作者陈俊文（左2），一同逛博茶会，并和中埔乡长李碧菁（左1）品尝中埔最道地的“铃兰碗粿”，盛赞碗粿口感扎实又Q弹。" width="500" /></a><figcaption id="caption-12569922" class="wp-caption-text">嘉义县长翁章梁（右2）邀请《做工的人》原著作者林立青（右1），及《华丽计程车》的作者陈俊文（左2），一同逛博茶会，并和中埔乡长李碧菁（左1）品尝中埔最道地的“铃兰碗粿”，盛赞碗粿口感扎实又Q弹。（嘉义县政府提供）</figcaption></figure>
+<figure id="12569920" aria-describedby="caption-12569920" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/11/470805-450x337.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/11/470805-450x337.jpg" alt="华丽计程车》作者陈俊文，亲自开着华丽计程车，将计程车化身为行动的广告车，在嘉义博茶会场外的台18线阿里山公路旁为博茶会宣传，为活动增添亮点。" width="500" /></a><figcaption id="caption-12569920" class="wp-caption-text">华丽计程车》作者陈俊文，亲自开着华丽计程车，将计程车化身为行动的广告车，在嘉义博茶会场外的台18线阿里山公路旁为博茶会宣传，为活动增添亮点。（嘉义县政府提供）</figcaption></figure>
+<figure id="12569919" aria-describedby="caption-12569919" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/11/470804-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/11/470804-450x300.jpg" alt="嘉义县长翁章梁（右3）邀请《做工的人》原著作者林立青（左3），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左2）、中埔乡农会总干事李碧云（左1）在茶食馆内合影。" width="500" /></a><figcaption id="caption-12569919" class="wp-caption-text">嘉义县长翁章梁（右3）邀请《做工的人》原著作者林立青（左3），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左2）、中埔乡农会总干事李碧云（左1）在茶食馆内合影。（嘉义县政府提供）</figcaption></figure>
+<figure id="12569918" aria-describedby="caption-12569918" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/11/470803-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/11/470803-450x300.jpg" alt="嘉义县长翁章梁（中）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左1）、中埔乡农会总干事李碧云（右1）在会场合影。" width="500" /></a><figcaption id="caption-12569918" class="wp-caption-text">嘉义县长翁章梁（中）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（左1）、中埔乡农会总干事李碧云（右1）在会场合影。（嘉义县政府提供）</figcaption></figure>
+<figure id="12569917" aria-describedby="caption-12569917" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/11/470802-450x337.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/11/470802-450x337.jpg" alt="23日嘉义县长翁章梁（左1）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（左3），一同逛博茶会，并和中埔乡长李碧菁（右2）、中埔乡农会总干事李碧云（右1）在四季茶区冬藏展柜前合影。" width="500" /></a><figcaption id="caption-12569917" class="wp-caption-text">23日嘉义县长翁章梁（左1）邀请《做工的人》原著作者林立青（左2），及《华丽计程车》的作者陈俊文（左3），一同逛博茶会，并和中埔乡长李碧菁（右2）、中埔乡农会总干事李碧云（右1）在四季茶区冬藏展柜前合影。（嘉义县政府提供）</figcaption></figure>
+<figure id="12569916" aria-describedby="caption-12569916" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/11/470801-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/11/470801-450x300.jpg" alt="2020嘉义博茶会11月21日热闹开幕，23日嘉义县长翁章梁（中）特别邀请今年度最夯台剧《做工的人》原著作者林立青（左2），及任职于新港国中《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（右1）、中埔乡农会总干事李碧云（左1）在会场合影。" width="500" /></a><figcaption id="caption-12569916" class="wp-caption-text">2020嘉义博茶会11月21日热闹开幕，23日嘉义县长翁章梁（中）特别邀请今年度最夯台剧《做工的人》原著作者林立青（左2），及任职于新港国中《华丽计程车》的作者陈俊文（右2），一同逛博茶会，并和中埔乡长李碧菁（右1）、中埔乡农会总干事李碧云（左1）在会场合影。（嘉义县政府提供）</figcaption></figure>
 <p>翁章梁说，先前行销日环食活动时，刚好是《做工的人》热映时期，为了让行销影片更接地气，他穿着“吊嘎”工人装扮成热门台剧“做工的人”，获得许多网友回响，没想到连原著作者林立青都来脸书留言：“看完我都想寄两片药布给县长了，单手用砂轮机很容易酸痛。”因此这次嘉义举办博茶会想要推广活动周边美食时，翁章梁便想邀超接地气的林立青来中埔看展览、吃美食，并推荐便宜、料多、价格又实在的国民小吃。</p>
 <p>翁章梁带着两人品尝中埔最道地的“铃兰碗粿”及“阿霞肉粽”，铃兰碗粿是中埔在地20年的传统古早味碗粿，曾获得最强碗粿争霸赛的优选，坚持以不掺水的纯在来米磨浆，制作手工咸碗粿，滋味Q弹有劲，黑糖碗糕同样也是招牌特色，林立青一吃就爱上这口感扎实又Q弹的碗糕，马上为甜粿取名为“珍珠QQ粿”，直呼这是北部没有的口味！</p>
 <p>当翁章梁介绍起林立青的职业时，林立青还被阿霞肉粽的老板问着，怎么一点都不像工地主任，只见林立青忍不住马上把衬衫脱掉，秀出穿在里头的招牌黑色吊嘎，笑说来博茶会当然是要穿得气质一点，逗得全场哈哈大笑。</p>
@@ -27,48 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/10/22/n12493890.md#1">嘉义国宝宴  融入故宫国宝及在地特色料理</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/10/23/n12496483.md#1">振兴三倍券嘉县抽奖活动 幸运得主抽中汽车</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/10/25/n12500118.md#1">嘉义县市教师职业工会暨教师会理事长交接</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/3/n12522450.md#1">2020嘉义博茶会预约看展 即有机会抽3C大奖</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/5/n12527206.md#1">故宫南院户外美术馆  艺术方舟启航开幕</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/21/n12565802.md#1">高山茶都嘉义  2020博茶会在中埔盛大开幕</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/23/n12569471.md#1">三秀园户外音乐会 千人聆赏美景美乐</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/23/n12569377.md#1">碧沙街渔村新厝味 布袋海口市集即将登场</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/23/n12569301.md#1">吸烟后久咳及呼吸喘 小心可能是“肺阻塞”</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/23/n12569253.md#1">好美企业净滩行动日  企业透过双手守护海岸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/22/n12493890.md#1">嘉义国宝宴  融入故宫国宝及在地特色料理</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/23/n12496483.md#1">振兴三倍券嘉县抽奖活动 幸运得主抽中汽车</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/25/n12500118.md#1">嘉义县市教师职业工会暨教师会理事长交接</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/3/n12522450.md#1">2020嘉义博茶会预约看展 即有机会抽3C大奖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/5/n12527206.md#1">故宫南院户外美术馆  艺术方舟启航开幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/21/n12565802.md#1">高山茶都嘉义  2020博茶会在中埔盛大开幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616208.md#1">文雅国小生态健行暨校本课程小艺人表演</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616274.md#1">嘉市特色好店家 助身障者享有知的权利</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616115.md#1">嘉义邮局举办捐血活动 邀民众捐血纾解血荒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616121.md#1">虎尾建国眷村 景观环境及眷舍修缮工程动工</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/23/n10165368.md#1" target="_blank">赵刚：穿制服的思想</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/4/n9225929.md#1" target="_blank">对中国法轮功学员被迫害的调查（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/11/n12541883.md#1">突出部之役 巴顿将军的神迹之战</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/10/31/n12516432.md#1">【思想领袖】约翰逊：拜登撒谎 媒体视而不见</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/21/n12566522.md#1">【横河直播】舞弊曝海量证据 大诉讼才开始</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/22/n12567368.md#1">【珍言真语】金虹：美媒“自残” 与共党同路</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/20/n12564577.md#1">陆媒惊爆：成龙撒了37年的一个弥天大谎</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/21/n12565534.md#1">美房产商买二手房翻修 发现大量现金速归还</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/21/n12565022.md#1">特斯拉电动汽车将推新技术：车身即是电池</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/20/n12564577.md#1">陆媒惊爆：成龙撒了37年的一个弥天大谎</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/20/n12564311.md#1">吴京恐不能再拍动作戏 关节烂到软骨像杂草</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/17/n12555630.md#1">第57届金马奖完整得奖名单 莫子仪登影帝</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/21/n12565734.md#1">BTS成员SUGA曝决心手术原因：拿500ml饮料都痛</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/22/n12567816.md#1">孟美岐搭机找不到座位 原来是私生饭做了手脚</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/20/n12564183.md#1">每天做5个动作 终结驼背软塌姿势 增肌效果加倍</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/21/n12565681.md#1">私房食谱“三杯鸡” 咸甜香嫩超级下饭</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/21/n12565429.md#1">车评：硬朗的城市跨界车 2020 Hyundai Venue SEL</a></li>
-<li><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/17/n12556776.md#1">高血压2大方法降下来！症状、治疗和量血压全图解</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dgwhoe3792/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dgwhoe3792/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/23/n12569914.htm">翁章梁邀林立青暨陈俊文 逛博茶会吃美食</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/23/n12569914.htm">翁章梁邀林立青暨陈俊文 逛博茶会吃美食</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dgwhoe3792/djy/blob/master/gb/20/11/23/n12569914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dgwhoe3792/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dgwhoe3792/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dgwhoe3792/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dgwhoe3792/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/11/23/n12569914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
